--- a/EXP2/RECITATION.html
+++ b/EXP2/RECITATION.html
@@ -351,7 +351,7 @@
 </body>
 </html>
 <!-- Q8 -->
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -403,14 +403,14 @@
   <nav id="navbar">
     <a href="#welcome-section">Welcome</a>
     <a href="#project-section">Projects</a>
-    <a id="profile-link" href="https://example.com" target="_blank">Profile</a>
+    <a id="profile-link" href="https://github.com/rishon1245" target="_blank">Profile</a>
   </nav>
   <section id="welcome-section">
     <h1>Welcome to My Portfolio</h1>
   </section>
   <section id="project-section">
     <div class="project-tile">
-      <a href="https://example.com/project1" target="_blank">Project 1</a>
+      <a href="https://github.com/rishon1245/WP_LAB/tree/main/EXP1" target="_blank">Project 1</a>
     </div>
   </section>
 </body>
